<resources>
    <string name="app_name">CIBL Task</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="bkash_logo_text">Bkash Logo</string>
    <string name="nagad_logo_text">Nagad Logo</string>
    <string name="payment_method_logo_text">Payment Method Logo</string>
    <string name="submit_text">Submit</string>
    <string name="narration_text">Narration</string>
    <string name="payment_s_name_text">%s Name</string>
    <string name="payment_s_phone_text">%s Phone</string>
    <string name="enter_phone_no_text">Enter phone no</string>
    <string name="enter_name_text">Enter name</string>
    <string name="enter_amount_text">Enter amount</string>
    <string name="enter_narration_text">Enter narration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="community_bank_logo_text">Community Bank Logo</string>
    <string name="community_bank_address">Police Plaza Concord (Level 10, Tower 2) Plot 2, Road 144, Gulshan 1</string>
    <string name="s_fund_transfer_text">%s Fund Transfer</string>
    <string name="transaction_receipt_text">Community Cash\nTransaction Receipt</string>
    <string name="transaction_info_text">Transaction Info</string>
    <string name="amount_text">Amount</string>
    <string name="transaction_date_time_text">Transaction Date Time</string>
    <string name="total_text">Total</string>
    <string name="bdt_s_text">BDT %s</string>
    <string name="payment_s_number_text">%s Number</string>
    <string name="download_receipt_text">Download Receipt</string>
    <string name="address_text">Address</string>
    <string name="permission_denied_message">Permission denied! Please allow file permission.</string>
    <string name="location_permission_denied_message">Location permission denied!</string>
    <string name="download_successfully_message">Download Successfully! %s</string>
</resources>